add mb-4 on the edit registration form

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -72,7 +72,7 @@
 
 
           <div class="mt-6 ml-2">
-            <h4 class="text-sm text-gray-400 italic">Ton mot de passe actuel : </h4>
+            <h4 class="text-sm text-gray-400 italic mb-4">Ton mot de passe actuel : </h4>
           </div>
           <div class="input-group js-input-group">
             <div class="input-container mt-3">
