--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav
   class="flex absolute top-0 items-center text-right justify-between bg-grey-darkest w-full z-10 mt-2 ">
-  <div class="md:mb-2 mb-0 relative">
+  <div class="md:mb-2 mb-0 relative mt-1">
     <div class="flex items-center ml-3 mt-2">
       <%=link_to root_path do%>
       <%= image_tag("logogo.svg", size: "48x48") %>
