--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
 
   <div class="hamburger_block block sm:hidden">
     <button id="nav-toggle"
-      class="absolute top-0 right-0 items-center px-6 py-3 border rounded text-grey border-grey-dark hover:text-white hover:border-white">
+      class="absolute top-0 right-0 items-center px-6 py-3 border rounded text-grey border-grey-dark border-primary-500 hover:text-white hover:border-white">
       <svg class="hamburger fill-primary-500 h-6 w-6" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
         <title>Menu</title>
         <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
