--- a/app/views/users/plans/show.html.erb
+++ b/app/views/users/plans/show.html.erb
@@ -17,7 +17,7 @@
                <h1 class="text-xl -ml-8 font-semibold text-gray-700 mb-5">Liste de course de ton <span
                     class="text-primary-800 text-2xl mx-2">programme</span> du <%= @plan.created_at.strftime("%d-%m-%Y") %> : </p>
                 </h1>
-
+                <%= link_to "Recevoir ma liste", shopping_list_path, class: "bg-primary-500 text-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm lg:text-base px-6 py-3 rounded-xl shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1", type: "button", style: "transition: all .15s ease" %>
           <div class="container flex ">
           <% @plan.days.each do |day| %>
            <p class= "mr-8">Jour</p>
