--- a/app/views/users/users/_sidebar.html.erb
+++ b/app/views/users/users/_sidebar.html.erb
@@ -60,6 +60,7 @@
           Paramètres du compte
           <% end %>
 
+          <% if current_user.current_plan_id? %>
           <%= link_to plan_path(current_user.current_plan_id), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
           <svg class="text-gray-400 fill-current group-hover:text-white mr-3 h-6 w-6"
             xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/"
@@ -85,6 +86,7 @@
             </switch>
           </svg>
           Liste de course
+          <% end %>
           <% end %>
 
           <% if current_user.admin %>
