new image added in 500 error page

--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -24,7 +24,7 @@
       <%end%>
     </div>
     <div>
-      <%= image_tag 'ramen.svg', class: "w-full h-full"%>
+      <%= image_tag 'construction_site.svg', class: "w-full h-full"%>
     </div>
   </div>
 </section>
