--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="flex absolute top-0 w-full z-10 mt-2 text-right ">
-  <div class="md:mb-2 mb-0 relative mt-1">   
+  <div class="md:mb-2 mb-0 relative mt-1 z-50 pointer-events-auto">   
     <div class="flex ml-3 mt-2 z-50">
       <%=link_to root_path do%>
       <%= image_tag("logogo.svg", size: "48x48") %>
