Mail for shopping list

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -100,3 +100,15 @@
     </div>
   </div>
 </body>
+© 2020 GitHub, Inc.
+Terms
+Perruche
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
