responsive on error pages, and spelling mistake corrected on landing page

--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -17,10 +17,10 @@
         La page que tu recherchais semble introuvable.
       </p>
       <%= link_to root_path,  class:"bg-primary-500 text-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm lg:text-base px-6 py-3 rounded-xl shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1" do %>
-      Retour à l'accueil
+      Retour
       <%end%>
       <%= link_to root_path,  class:"bg-warning text-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm lg:text-base px-6 py-3 rounded-xl shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1" do %>
-        Contacte-nous
+        Contact
       <%end%>
     </div>
     <div>
