--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -49,7 +49,7 @@
     <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
         <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Plus simple</h2>
-        <p class="leading-relaxed text-base">Gagne du temps en plannifiant tes menus sur une durée que tu choisis.</p>
+        <p class="leading-relaxed text-base">Gagne du temps en planifiant tes menus sur une durée que tu choisis.</p>
       </div>
       <div
         class="sm:w-32 sm:order-none order-first sm:h-32 h-20 w-20 sm:ml-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
