--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -17,10 +17,10 @@
         Nos équipes font tout leur possible pour remettre les choses en ordre.
       </p>
       <%= link_to root_path,  class:"bg-primary-500 text-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm lg:text-base px-6 py-3 rounded-xl shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1" do %>
-      Retour à l'accueil
+      Retour
       <%end%>
-      <%= link_to root_path,  class:"bg-warning text-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm lg:text-base px-6 py-3 rounded-xl shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1" do %>
-        Contacte-nous
+      <%= link_to root_path,  class:"bg-warning no-wrap text-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm lg:text-base px-6 py-3 rounded-xl shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1" do %>
+        Contact
       <%end%>
     </div>
     <div>
