--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
     <div>
       <div class="fixed inset-x-0 top-0 flex items-end justify-right mt-20  sm:p-6 justify-end z-50 ">
         <div data-controller="alert"
-          class="max-w-sm w-full shadow-lg px-2 py-2 rounded relative <%= tailwind_classes_for(type) %>">
+          class="max-w-sm w-full shadow-lg px-2 py-2 rounded relative bg-primary-600 border-l-4 border-primary-900 text-white <%= tailwind_classes_for(type) %>">
           <div class="p-2">
             <div class="flex items-start">
               <div class="ml-3 w-0 flex-1 pt-0.5">
