--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 
     <% flash.each do |type, msg| %>
     <div class="fixed inset-x-0 top-0 flex items-end justify-right mt-20  sm:p-6 justify-end z-50 ">
-      <% case type %>
+      <% case type.to_s %>
       <% when "notice" %>
       <div data-controller="alert"
         class="max-w-sm w-full shadow-lg px-2 py-2 rounded relative bg-primary-600 border-l-4 border-primary-900 text-white">
@@ -43,32 +43,31 @@
       <% when "info" || "alert" %>
         <div data-controller="alert" class="max-w-sm w-full shadow-lg px-2 py-2 rounded relative bg-yellow-300 border-l-4 border-yellow-400 text-black ">
        <% end %>
-            <div class="p-2">
-              <div class="flex items-start">
-                <div class="ml-3 w-0 flex-1 pt-0.5">
-                  <div class="text-lg leading-5 font-medium">
-                    <p> <%= notice %> </p>
-                    <p> <%= error %> </p>
-                    <p> <%= info %> </p>
-                    <p> <%= alert %> </p>
-                  </div>
+          <div class="p-2">
+            <div class="flex items-start">
+              <div class="ml-3 w-0 flex-1 pt-0.5">
+                <div class="text-lg leading-5 font-medium">
+                  <p> <%= notice %> </p>
+                  <p> <%= error %> </p>
+                  <p> <%= info %> </p>
+                  <p> <%= alert %> </p>
                 </div>
-                <div class="ml-4 flex-shrink-0 flex">
-                  <button data-action="alert#close"
-                    class="inline-flex <%= tailwind_text_for(type) %> focus:outline-none focus:text-gray-300 transition ease-in-out duration-150">
-                    <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                      <path fill-rule="evenodd"
+              </div>
+              <div class="ml-4 flex-shrink-0 flex">
+                <button data-action="alert#close"
+                  class="inline-flex text-white focus:outline-none focus:text-gray-300 transition ease-in-out duration-150">
+                  <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
                         d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
                         clip-rule="evenodd" />
-                    </svg>
-                  </button>
-                </div>
+                  </svg>
+                </button>
               </div>
             </div>
           </div>
         </div>
-
-        <% end %>
+      </div>
+      <% end %>
 
         <%= yield %>
         <%= render "layouts/footer" %>
