--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container mx-auto">
 
   <!--Lead+main img-->
-  <div class="top-page flex flex-row items-center justify-around md:mt-28">
+  <div class="flex flex-row items-center justify-around md:mt-28">
 
-    <div class="animate__animated animate__fadeInLeft left-top w-96 flex-wrap text-center md:text-left">
+    <div class="animate__animated animate__fadeInLeft w-96 flex-wrap text-center md:text-left">
       <p class="text-2xl md:text-3xl lg:text-5xl tracking-wide	 text-warning font-bold mb-5">Ton menu en un clic...
       </p>
       <p class="text-lg md:text-xl lg:text-2xl text-gray-700 font-semibold mb-5">Parle-nous de toi et on s’occupe de
@@ -36,7 +36,7 @@
   <div class="presentation px-2 py-12 text-gray-700 body-font">
     <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 sm:flex-row flex-col">
       <div
-        class="sm:w-32 sm:h-32 h-20 w-20 sm:mr-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
+        class="land-pres sm:w-32 sm:h-32 sm:mr-10">
         <i class="fas fa-heartbeat fa-3x" style="color:red;"></i>
       </div>
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
@@ -48,17 +48,17 @@
     </div>
     <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-        <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Plus simple</h2>
+        < class="text-gray-900 text-lg title-font font-me
         <p class="leading-relaxed text-base">Gagne du temps en planifiant tes menus sur une durée que tu choisis.</p>
       </div>
       <div
-        class="sm:w-32 sm:order-none order-first sm:h-32 h-20 w-20 sm:ml-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
+        class="land-pres sm:w-32 sm:order-none order-first sm:h-32 h-20 w-20 sm:ml-10 ">
         <i class="fas fa-user-clock fa-3x" style="color:green;"></i>
       </div>
     </div>
     <div class="flex items-center lg:w-3/5 mx-auto sm:flex-row flex-col">
       <div
-        class="sm:w-32 sm:h-32 h-20 w-20 sm:mr-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
+        class="land-pres sm:w-32 sm:h-32 h-20 w-20 sm:mr-10">
         <i class="fas fa-carrot fa-3x" style="color:orange;"></i>
       </div>
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
