--- a/app/views/admins/admins/show.html.erb
+++ b/app/views/admins/admins/show.html.erb
@@ -11,7 +11,7 @@
       <!--overview cards start-->
     <div class="mt-12">
       <ul class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-6">
-        <li class="col-start-2 col-span-2 flex shadow-sm rounded-md">
+        <li class="admin-card col-start-2">
           <div
             class="flex-shrink-0 flex items-center justify-center w-16 bg-pink-600 text-white text-sm font-medium rounded-l-md">
             <i class="fas fa-users fa-2x"></i>
@@ -25,7 +25,7 @@
           </div>
         </li>
 
-        <li class="col-span-2 flex shadow-sm rounded-md">
+        <li class="admin-card">
           <div
             class="flex-shrink-0 flex items-center justify-center w-16 bg-primary-800 text-white text-sm font-medium rounded-l-md">
             <%= image_tag("recipe.svg", size: "40x40") %>
@@ -42,7 +42,7 @@
 
           <!--start second row-->
         <ul class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-6">
-        <li class="col-span-2 flex shadow-sm rounded-md">
+        <li class="admin-card">
           <div
             class="flex-shrink-0 flex items-center justify-center w-16 bg-purple-600 text-white text-sm font-medium rounded-l-md">
             <i class="fas fa-tachometer-alt fa-2x"></i>
@@ -55,7 +55,7 @@
             </div>
           </div>
         </li>
-        <li class="col-span-2 flex shadow-sm rounded-md">
+        <li class="admin-card">
           <div
             class="flex-shrink-0 flex items-center justify-center w-16 bg-purple-600 text-white text-sm font-medium rounded-l-md">
             <i class="fas fa-tachometer-alt fa-2x"></i>
@@ -68,7 +68,7 @@
             </div>
           </div>
         </li>
-        <li class="col-span-2 flex shadow-sm rounded-md">
+        <li class="admin-card">
           <div
             class="flex-shrink-0 flex items-center justify-center w-16 bg-purple-600 text-white text-sm font-medium rounded-l-md">
             <i class="fas fa-tachometer-alt fa-2x"></i>
