--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,6 @@
 <footer class="footer-org">
+
+        <!--left-part footer-->
   <div class="footer-content md:py-4  sm:flex-row">
     <div class="logo-footer  md:justify-start ">
     <%= image_tag("logofooter.svg", size: "48x48") %>
@@ -6,8 +8,11 @@
     </div>
     <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-6 -mb-1">© 2020 with <span style="color:red"><i class="fas fa-heart"></i></span> by les Perruches
     </p>
+
+          <!--right-part footer-->
     <span class="icon-org  sm:ml-auto sm:mt-0  sm:justify-start">
       <a href="https://github.com/martinmoradi/mealories" target="_blank" class="github-icon focus:outline-none">
+
            <!--github svg-->
         <span style="color:dark-gray"><i class="fab fa-github fa-3x"></i></span>
         </a>
