--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,8 @@
       <% end %>
     </div>
   </div>
-
+  
+    <!-- Hamburger-menu  -->
   <div class="hamburger_block block sm:hidden">
     <button id="nav-toggle"
       class="absolute top-0 right-0 items-center px-6 py-3 border rounded text-grey border-primary-500 hover:text-white hover:border-primary-800">
