--- a/app/views/users/plans/_new.html.erb
+++ b/app/views/users/plans/_new.html.erb
@@ -64,13 +64,13 @@
               <h4 class="text-base mb-4 ml-32 text-center text-gray-600">Durée en jours<span
                           class="italic text-sm text-gray-400 ml-3">(entre 1 et 7 jours)</span></h4>
               <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent justify-items-center">
-                <button data-action="decrement" id="decrement"
-                  class=" bg-primary-300 text-gray-600 hover:bg-primary-800 hover:text-white  w-20 rounded-l cursor-pointer outline-none ">
+                <button 
+                  class="decrement bg-primary-300 text-gray-600 hover:bg-primary-800 hover:text-white  w-20 rounded-l cursor-pointer outline-none ">
                   <span class="m-auto text-2xl font-thin">−</span>
                 </button>
-                <%= f.number_field(:nb_of_days, in: 1..7, id: "nb_of_days", value: 1, class: "bg-white text-sm text-gray-900 text-center focus:outline-none border w-full text-gray-700 text-sm font-semibold border-primary-800 focus:border-primary-600 rounded-l-md w-full p-1 text-xl") %>
-                <button data-action="increment" id="increment"
-                  class="bg-primary-300 text-gray-600 hover:bg-primary-800 hover:text-white  w-20 rounded-r cursor-pointer">
+                <%= f.number_field(:nb_of_days, in: 1..7, value: 1, class: "nb_of_days bg-white text-sm text-gray-900 text-center focus:outline-none border w-full text-gray-700 text-sm font-semibold border-primary-800 focus:border-primary-600 rounded-l-md w-full p-1 text-xl") %>
+                <button 
+                  class="increment bg-primary-300 text-gray-600 hover:bg-primary-800 hover:text-white  w-20 rounded-r cursor-pointer">
                   <span class="m-auto text-2xl font-thin">+</span>
                 </button>
               </div>
@@ -86,4 +86,3 @@
       </div>
     </div>
   </div>
-       <%= javascript_pack_tag 'new_plan' %>
