gray added in presentation text landing page

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -41,15 +41,15 @@
       </div>
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
         <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Prends-soin de ta santé</h2>
-        <p class="leading-relaxed text-base">Mange mieux en laissant nos algorithmes choisir tes repas en fonction de
+        <p class="leading-relaxed text-base text-gray-500">Mange mieux en laissant nos algorithmes choisir tes repas en fonction de
           tes informations.
         </p>
       </div>
     </div>
     <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-        < class="text-gray-900 text-lg title-font font-me
-        <p class="leading-relaxed text-base">Gagne du temps en planifiant tes menus sur une durée que tu choisis.</p>
+        <div class="text-gray-900 text-lg title-font font-me">Plus rapide</div>
+        <p class="leading-relaxed text-base text-gray-500">Gagne du temps en planifiant tes menus sur une durée que tu choisis.</p>
       </div>
       <div
         class="land-pres sm:w-32 sm:order-none order-first sm:h-32 h-20 w-20 sm:ml-10 ">
