--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -81,7 +81,7 @@
             Questions fréquentes
           </h2>
           <p class="mt-4 text-lg text-gray-500">Parce que t'hésites encore ? </p>
-          <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Contacte-nous !</a>
+          <a href="<%= new_contact_path %>" class="font-medium text-indigo-600 hover:text-indigo-500">Contacte-nous !</a>
         </div>
         <div class="mt-12 lg:mt-0 lg:col-span-2">
           <dl class="space-y-12">
