Fix update password user

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -104,7 +104,7 @@
             <%= link_to :back do %>
             <p class="text-primary-600 hover:text-primary-800">Retour</p>
             <% end %>
-            <%= button_to "Supprimer le compte", registration_path(resource_name), data: { confirm: "Confirmer?" }, class:"text-gray-500 bg-transparent justify-end focus:outline-none hover:bg-red-500 rounded-xl px-4 hover:text-white ml-32 -mr-8 text-xs md:text-sm  outline-none focus:outline-none ", method: :delete %>
+            <%= button_to "Supprimer le compte", registration_path(resource_name), data: { confirm: "Confirmer?" }, class:"text-gray-500 bg-transparent justify-end focus:outline-none hover:bg-red-500 rounded-xl px-4 hover:text-white ml-32 -mr-8 text-xs md:text-sm  outline-none focus:outline-none " %>
             </p>
           </div>
 
