devise views and fixes

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,13 +1,13 @@
+<%= devise_error_messages! %>
+
 <div class="min-h-screen my-auto flex flex-col justify-center py-12 sm:px-6 lg:px-8 max-h-90">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
-
     <%= image_tag 'logogo', class:"mx-auto h-12 w-auto" %>
     <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
       Mot de passe oublié ?
     </h2>
     <p class="mt-2 text-center text-sm text-gray-600 max-w">
       On ne te jugera pas !
-      </a>
     </p>
   </div>
   <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
