--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -74,6 +74,7 @@ body {
 }
 
 // Navbar end
+
 @layer components {
     .footer-org {
         @apply text-gray-700 bg-primary-500
@@ -103,6 +104,9 @@ body {
         @apply col-span-2 flex shadow-sm rounded-md
     }
     ;
+    .user-card {
+      @apply flex-shrink-0 flex items-center justify-center w-16 text-white text-sm font-medium rounded-l-md
+    }
 }
 
 // Tailwind components end
