--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -16,7 +16,7 @@
             <ul class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-4">
               <li class="col-span-1 flex shadow-sm rounded-md">
                 <div
-                  class="flex-shrink-0 flex items-center justify-center w-16 bg-pink-600 text-white text-sm font-medium rounded-l-md">
+                  class="user-card bg-pink-600 ">
                   <svg class="w-12 h-12 fill-current mt-3 ml-2" fill="none"
                     xmlns:x="http://ns.adobe.com/Extensibility/1.0/"
                     xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/"
@@ -49,7 +49,7 @@
 
               <li class="col-span-1 flex shadow-sm rounded-md">
                 <div
-                  class="flex-shrink-0 flex items-center justify-center w-16 bg-purple-600 text-white text-sm font-medium rounded-l-md">
+                  class="user-card bg-purple-600">
                   <svg class="w-12 h-12 fill-current mt-2" fill="none" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125"
                     enable-background="new 0 0 100 100" xml:space="preserve">
@@ -73,7 +73,7 @@
 
               <li class="col-span-1 flex shadow-sm rounded-md">
                 <div
-                  class="flex-shrink-0 flex items-center justify-center w-16 bg-yellow-500 text-white text-sm font-medium rounded-l-md">
+                  class="user-card bg-yellow-500">
                   <svg class="w-14 h-14 fill-current mt-2" fill="none" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 91 113.75"
                     enable-background="new 0 0 91 91" xml:space="preserve">
@@ -105,7 +105,7 @@
 
               <li class="col-span-1 flex shadow-sm rounded-md">
                 <div
-                  class="flex-shrink-0 flex items-center justify-center w-16 bg-green-500 text-white text-sm font-medium rounded-l-md">
+                  class="user-card bg-green-500">
                   <svg class="w-14 h-14 fill-current mt-3" fill="none" xmlns:x="http://ns.adobe.com/Extensibility/1.0/"
                     xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:graph="http://ns.adobe.com/Graphs/1.0/"
                     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px"
