--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -107,6 +107,15 @@ body {
     .user-card {
       @apply flex-shrink-0 flex items-center justify-center w-16 text-white text-sm font-medium rounded-l-md
     }
+    ;
+    .uc-org {
+      @apply col-span-1 flex shadow-sm rounded-md
+    }
+    ;
+    .uc-form {
+      @apply flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md
+    }
+    ;
 }
 
 // Tailwind components end
