--- a/app/views/users/recipes/_show.html.erb
+++ b/app/views/users/recipes/_show.html.erb
@@ -5,20 +5,20 @@
       class="p-4 bg-primary-500 rounded-full hover:bg-primary-700 nice-btns focus:bg-primary-800 transition ease-in duration-200 focus:outline-none">
       <svg viewBox="0 0 20 20" enable-background="new 0 0 20 20" class="w-6 h-6">
         <path fill="#FFFFFF" d="M16,10c0,0.553-0.048,1-0.601,1H11v4.399C11,15.951,10.553,16,10,16c-0.553,0-1-0.049-1-0.601V11H4.601
-                                C4.049,11,4,10.553,4,10c0-0.553,0.049-1,0.601-1H9V4.601C9,4.048,9.447,4,10,4c0.553,0,1,0.048,1,0.601V9h4.399
-                                C15.952,9,16,9.447,16,10z" />
+        C4.049,11,4,10.553,4,10c0-0.553,0.049-1,0.601-1H9V4.601C9,4.048,9.447,4,10,4c0.553,0,1,0.048,1,0.601V9h4.399
+        C15.952,9,16,9.447,16,10z"/>
       </svg>
     </button>
   </a>
 
   <!-- Modal Container -->
   <div data-target="modal.container"
-            data-action="click->modal#closeBackground keyup@window->modal#closeWithKeyboard"
-            class="hidden animated fadeIn fixed inset-0 overflow-y-auto flex items-center justify-center "
-            style="z-index: 9999;">   
-             <!-- Modal Inner Container -->
+    data-action="click->modal#closeBackground keyup@window->modal#closeWithKeyboard"
+    class="hidden animated fadeIn fixed inset-0 overflow-y-auto flex items-center justify-center"
+    style="z-index: 9999;">   
+   <!-- Modal Inner Container -->
 
-            <div class="w-8/12 relative static">
+    <div class="w-8/12 relative static">
 
       <!-- Modal Card -->
       <div class="m-1 bg-gray-100  rounded-lg shadow">
@@ -38,7 +38,7 @@
 
             <div class="md:w-1/2 max-w-md flex flex-col justify-center lg:border-r-8 lg:border-primary-600 pr-20">
 
-              <div class="text-2xl md:text-2xl font-light leading-normal">
+              <div class="recipe-input">
                 <p>Préparation :
                   <span class="text-xl">
                     <%= recipe.cook_time%> mins
@@ -46,7 +46,7 @@
                 </p>
               </div>
 
-              <div class="text-2xl md:text-2xl font-light  leading-normal ">
+              <div class="recipe-input">
                 <div class="mt-20 ">
                   <h2>Informations nutritionnelles </h2>
                 </div>
@@ -59,7 +59,7 @@
                 <li><%= recipe.fat_per_serving%> lipides</li>
               </ul>
 
-                <div class="text-2xl md:text-2xl font-light leading-normal mt-10 ">
+                <div class="recipe-input mt-10 ">
                   <p>Ingrédients </p>
                   <span class="text-base ">
                     <%= recipe.ingredients_list %>
