--- a/app/views/users/users/_sidebar.html.erb
+++ b/app/views/users/users/_sidebar.html.erb
@@ -8,7 +8,7 @@
         <nav class="flex-1 px-2 space-y-1">
 
           <% unless current_user.incomplete_profile? %>
-          <%= link_to user_path(current_user), class:"bg-gray-100 hover:bg-primary-800 hover:text-white text-gray-900 group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <%= link_to user_path(current_user), class:"bg-gray-100 hover:bg-primary-800 hover:text-white text-gray-900 el-sidebar" do %>
           <svg class="text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
             stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -18,7 +18,7 @@
           <% end %>
           <%= render 'users/plans/new' %>
 
-          <%= link_to plans_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <%= link_to plans_path, class:"el-sidebar " do %>
           <svg class="text-gray-400 group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
             viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -27,7 +27,7 @@
           Mes programmes
           <% end %>
           <% end %>
-          <%= link_to edit_user_path(current_user), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <%= link_to edit_user_path(current_user), class:"el-sidebar" do %>
           <svg class="text-gray-500 fill-current group-hover:text-white mr-3 h-6 w-6" fill="none"
             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px"
             viewBox="0 0 32 40" style="enable-background:new 0 0 32 32;" xml:space="preserve">
@@ -61,7 +61,7 @@
           Mes informations
           <% end %>
 
-          <%= link_to edit_user_registration_path(current_user), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <%= link_to edit_user_registration_path(current_user), class:" el-sidebar" do %>
           <svg class="text-gray-400 fill-current group-hover:text-white mr-3 h-6 w-6"
             xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/"
             xmlns:graph="http://ns.adobe.com/Graphs/1.0/" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -89,7 +89,7 @@
           <% end %>
 
           <% if current_user.current_plan_id? %>
-          <%= link_to plan_path(current_user.current_plan_id), class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <%= link_to plan_path(current_user.current_plan_id), class:"  el-sidebar" do %>
           <svg class="text-gray-400 fill-current group-hover:text-white mr-3 h-6 w-6"
             xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/"
             xmlns:graph="http://ns.adobe.com/Graphs/1.0/" fill="none" xmlns="http://www.w3.org/2000/svg"
@@ -120,7 +120,7 @@
           <% if current_user.admin %>
           <hr>
           <a href="<%=admins_admin_path(current_user.id)%>"
-            class="text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md">
+            class="el-sidebar">
             <!-- Heroicon name: chart-bar -->
             <svg class="text-gray-400 group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
               fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -130,7 +130,7 @@
             Admin dashboard
           </a>
 
-          <%= link_to new_admins_recipe_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <%= link_to new_admins_recipe_path, class:"el-sidebar" do %>
           <svg class="fill-current group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 80" x="0px" y="0px">
             <title>Recipe, cooking, book, kitchen, menu, </title>
