--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -3,10 +3,10 @@
 
       <%= image_tag 'logogo', class:"mx-auto h-12 w-auto" %>
     <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-      Ecris nous !
+      Contact
     </h2>
     <p class="mt-2 text-center text-sm text-gray-600 max-w">
-      L'équipe Mealories sera ravie de te répondre dés que possible !
+      Promis, on te répondra <span class="text-primary-600 italic">soon</span>&trade; !
       </a>
     </p>
   </div>
