--- a/app/views/users/plans/_new.html.erb
+++ b/app/views/users/plans/_new.html.erb
@@ -2,7 +2,7 @@
     <a href="#" data-action="click->modal#open"
       class="text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md">
       <!-- Heroicon name: chart-bar -->
-      <svg fill="none" class="text-gray-400 fill-current group-hover:text-white mr-3 h-6 w-6"
+      <svg fill="none" class="fill-current group-hover:text-white mr-3 h-6 w-6"
         xmlns:x="http://ns.adobe.com/Extensibility/1.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/"
         xmlns:graph="http://ns.adobe.com/Graphs/1.0/" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125"
