--- a/app/views/users/plans/show.html.erb
+++ b/app/views/users/plans/show.html.erb
@@ -1,46 +1,51 @@
 <%= render 'users/users/welcome'%>
-
-<div class="flex overflow-hidden">
-
+<div class="h-screen flex overflow-auto min-w-full">
   <%= render 'users/users/sidebar' %>
 
-  <div class="flex flex-col w-0 flex-1 overflow-hidden h-screen">
+  <div class="flex flex-col mx-4 relative w-full">
+    
+    <div class="mt-8"></div>
+    <h1 class="text-primary-800 text-3xl ml-1s font-semibold mb-2 "><%= current_user.first_name %>, </h1>
 
-    <main class="flex-1 relative overflow-y-auto focus:outline-none">
-      <div class="py-2">
+    <h2 class="text-base text-gray-500 "> Retrouve les ingrédients de ton programme actuel ici </h2>
+    <div class="ml-5 mt-5">
+      <% @plan.days.each.with_index do |day, idx| %>
+      <details class="my-5">
+        <summary class="mt-5 text-xl text-gray-500 hover:text-gray-700  cursor-pointer focus:outline-none">
+          Jour n°<%= idx + 1 %>
+        </summary>
+        <p class="text-gray-600 text-base my-3">Ton dîner :
+          <span class="tracking-wide text-lg  text-primary-600">
+            <%= link_to recipe_path(day.lunch) do %><%= day.lunch.title %>
+            <span>
+        </p>
+        <% end %>
+        <ul class="ml-3">
+          <% day.lunch.ingredients_list_formatted.each do |ingredient| %>
+          <li class="text-sm text-gray-500 mb-1 list-inside"><%= ingredient %></li>
+          <% end %>
+        </ul>
 
-       
-
-      <div class="py-4 mt-6">
-            <div class="rounded-lg h-96 ">
-              <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8 ">
-               <h1 class="text-xl -ml-8 font-semibold text-gray-700 mb-5">Liste de course de ton <span
-                    class="text-primary-800 text-2xl mx-2">programme</span> du <%= @plan.created_at.strftime("%d-%m-%Y") %> : </p>
-                </h1>
-                <%= link_to "Recevoir ma liste", shopping_list_path, class: "bg-primary-500 text-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm lg:text-base px-6 py-3 rounded-xl shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1", type: "button", style: "transition: all .15s ease" %>
-          <div class="container flex ">
-          <% @plan.days.each do |day| %>
-           <p class= "mr-8">Jour</p>
-           <div class="mb-5 flex">
-           <div class = "mb-3 mr-8">
-           <p>Déjeuner</p>
-           <p><%= day.lunch.title %></p>
-            <p><% day.lunch.ingredients_list_formatted.each do |i| %></p>
-            <p><%= i %></p>
+        <p class="text-gray-600 text-base my-3">Ton dîner :
+          <span class="tracking-wide text-lg  text-primary-600">
+            <%= link_to recipe_path(day.dinner) do %><%= day.dinner.title %>
+            <span>
+        </p>
+        <% end %>
+        <ul class="ml-3">
+          <% day.dinner.ingredients_list_formatted.each do |ingredient| %>
+          <li class="text-sm text-gray-500 mb-1"><%= ingredient %></li>
           <% end %>
-          </div>
-          <div>
-           <p>Dîner</p>
-           <p><%= day.dinner.title %></p>
-            <p><% day.dinner.ingredients_list_formatted.each do |i| %></p>
-            <p><%= i %></p>
-          <% end %>
-          </div>
-          </div>
-          <% end %>
-       </div>
-        </div>
-        
+        </ul>
+      </details>
+      <hr>
+      <% end %>
     </div>
+    <%= button_to "Envoyez-moi cette liste par mail", shopping_list_path, method: :get, class: "submit"%>
   </div>
+</div>
+
+
+
+
 </div>
